--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,31 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "WCC Infra Pvt Ltd",
+  "short_name": "WCC Infra",
+  "description": "WCC Infra Pvt Ltd - Leading Infrastructure Solutions in India. In association with Scrapworker for sustainable and eco-friendly waste management (https://scrapworker.com).",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#1E7D32",
+  "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "/assets/icons/wcc-logo-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "/assets/icons/wcc-logo-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "scope": "/",
+  "lang": "en",
+  "dir": "ltr",
+  "related_applications": [
+    {
+      "platform": "web",
+      "url": "https://scrapworker.com"
+    }
+  ]
 }
