--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
-name: 🚀 Deploy to VPS on Master Commit
+name: 🚀 Deploy to VPS on Main Commit
 
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   deploy:
@@ -22,7 +22,7 @@ jobs:
           port: 22
           script: |
             cd /var/www/wccinfra
-            git pull origin master
+            git pull origin main
             npm install --production
             npm run build
             systemctl restart nginx
