--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   },
   "dependencies": {
     "aos": "2.3.4",
+    "bootstrap": "^5.3.8",
+    "glightbox": "^3.3.1",
+    "imagesloaded": "^5.0.0",
+    "isotope-layout": "^3.0.6",
     "react": "^19.1.1",
     "react-countup": "6.5.3",
     "react-dom": "^19.1.1",
